# tng-mw-kinematics-spec

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb  vis.ipynb
scripts/: download_tng.py  quick_look.py
src/tngmw/: config.py  filters.py  io_hdf5.py  paths.py
