[project]
name = "tng-mw-kinematics-spec"
version = "0.1.0"
description = "MW-type kinematics + Na I D / Ca II H&K synthetic spectra (TNG)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tanmay Singh" }]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "h5py>=3.10",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "tqdm>=4.66",
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
  # analysis libs
  "yt>=4.3",
  "trident>=1.2",
  "scida>=0.6.1",
  "illustris_python>=1.0.0",
]

[tool.uv]
# lock for reproducibility across SOL/Phoenix if needed