[project]
name = "tng-mw-kinematics-spec"
version = "0.1.0"
description = "MW-type kinematics + Na I D / Ca II H&K synthetic spectra (TNG)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Tanmay Singh" }]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "h5py>=3.10",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "tqdm>=4.66",
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
  "yt>=4.3",
  "trident>=1.2",
  # "scida>=0.6.1",   # REMOVE this incompatible pin
  "illustris_python @ git+https://github.com/illustristng/illustris_python.git",
]

[project.optional-dependencies]
scida = ["scida<=0.3.5"]   # optional extra if/when you want it

[tool.uv]
# lock for reproducibility across SOL/Phoenix if needed